-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.4
-
None
-
Mac OS X
-
-
640c1d0c18025fc81cbf4f4a0ba67f1f5acf9884
On Windows, if direct rendering is not available it falls back to indirect rendering.
On Mac, if direct rendering is not available it fails without trying to fall back to indirect rendering.
I think on Mac it should try indirect rendering if it fails to create context with direct rendering.
| For Gerrit Dashboard: QTBUG-29641 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 47600,1 | Cocoa: Do not use NSOpenGLPFAAccelerated flag for GL context | 4.8 | qt/qt | Status: MERGED | +2 | 0 |