Cocoa: Do not use NSOpenGLPFAAccelerated flag for GL context

The NSOpenGLPFAAccelerated flag indicates that only hardware-accelerated
renderers are considered. It is used when direct rendering is enabled in
QGLFormat. As direct rendering is enabled by default in QGLFormat, this
prevents software rendering fallback if no hardware acceleration is
available.

Task-number: QTBUG-29641
Change-Id: I438bd5ce4e803962fd68c7e9d79f40840760e2d5
Reviewed-by: Samuel Rødal <samuel.rodal@digia.com>